# Paillier-GMP

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: main.cpp
include/: paillier.hpp
src/: impl.cpp  impl.hpp  io.cpp  io.hpp  main.cpp  paillier.cpp  paillier.hpp  secure_dot_product.cpp  secure_dot_product.hpp  tools.cpp  tools.h  tools.hpp
test/: add.cpp  functional_test.sh  mult.cpp  performance_test.sh
